app/assets/stylesheets/modules/layout.css.scss
html, body {
  height: 100%;
}

html {
  -webkit-font-smoothing: antialiased;
}

body {
  font-size: 16px;
  background-color: #222;
}

.wrap {
  width: 100%;
  min-height: 100%;
  height: auto !important;
  height: 100%;
  margin: -25px 0px -35px 0px;
}

footer, .toolbar {
  background: $toolbar-background;
  color: #fff;
}

.main-content {
  height: 100%;
  width: 100%;
  // So we don't have to look at a blank map
  //background: asset-url('ssm.jpg') no-repeat center;
}

.search-page {
  .main-content {
    position: fixed;
  }

  footer {
    position: absolute;
  }
}

.toolbar {
  @include linear-gradient(rgba(44, 62, 80, 1), $toolbar-background-bottom);
  //background: asset-url('header-drop.png') repeat-x top;
  padding: 35px 1em 50px 1em;
  height: 58px;
  border-bottom: 1px solid #242424;

  h1 {
    margin: 0;
  }

  p {
    margin: 0;
  }

  .tt-query, .tt-hint {
    padding: .5em;
    margin: 2px 0 0 20px;
    width: $toolbar-search-field-width;
    border: 1px solid $toolbar-accent-border;
    border-radius: 3px;
    box-shadow: inset 0 1px 5px 1px rgba(0,0,0,0.2);
  }

  input:focus {
    outline: none;
  }

  form {
    display: inline-block;
  }

  .user-info {
    float: right;
  }
}

#temporal-query {
  position: absolute;
  color: #fff;
  background: rgba(22,22,22,.9);
  z-index: 60;
  padding: 8px 12px;
  border-radius: 5px;
  top: 15px;
  right: 10px;
  box-shadow: 0 0 10px #424242;
  font-size: 1em;
}

#temporal-query p {
  margin: 0;
}

.leaflet-top.leaflet-right {
  top: 50px;
}


footer {
  height: 35px;
  z-index: 1000;
  bottom: 0;
  left: 0;
  right: 0;
  font-size: .7em;

  p {
    padding: 9px 20px 0 20px;
  }

  .version {
    background: $button-dark-bottom-gradient;
    padding: 2px 8px;
    border-radius: 2px;
    text-shadow: 1px 1px 1px $toolbar-background-bottom;
  }

  a:link, a:visited {
    color: #92bfec;
  }
}

.search {
  background: #282828;
  color: #fff;
  margin: 100px auto 0 auto;
  width: 500px;
  padding: 1em;
  border-radius: 5px;
  opacity: .9;
}

.modal-header {
  background: #f3f3f3;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
}

.modal-footer {
  margin: 0;
}

/*
Helper Classes
-------------------------------------
*/

.clearfix:before,
.clearfix:after {
  content: " ";
  display: table;
}

.clearfix:after {
  clear: both;
}

.clearfix {
  *zoom: 1;
}

